--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1239,9 +1239,11 @@ nav.title-bar {
     }
 }
 
-.item-listing h1 {
-    font-size: 1.6 * $global-font-size;
-    font-weight: bold;
+.item-listing h2 {
+    font-size: 2 * $global-font-size;
+    @include breakpoint(large) {
+        font-size: 3 * $global-font-size;
+    }
 }
 
 .item-listing img {
