--- a/asset/scss/_globals-revolution.scss
+++ b/asset/scss/_globals-revolution.scss
@@ -1,15 +1,10 @@
 @import "util/util";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
-$brown: #520603;
-$red: #dd231b;
-$gold: #e8bf00;
 $foundation-palette: (
-  primary: $red,
-  secondary: $gold,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: #660099, 
+  secondary: #2c0142, 
+  success: #3adb76, 
+  warning: #FFCC33, 
+  alert: #c91b00
 );
-$body-font-color: $brown;
 $body-font-family: 'Open Sans', sans-serif;
