--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -22,7 +22,7 @@ $lang = $filterLocale ? $this->lang() : null; ?>
 <div class="sensitive-material full-width-css block media-text grid-x grid-padding-x align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
-        <h3 class="h2 padding-vertical-1"><?=$escape($heading) ?></h3>
+        <h3 class="h2 padding-vertical-1 margin-bottom-1"><?=$escape($heading) ?></h3>
     </div>
     <?php
 endif; ?>
