--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -27,7 +27,6 @@ p.site-title {
   }
   @include breakpoint(large) {
     max-width: unset;
-    font-size: 1.3 * $global-font-size;
   }
 }
 
@@ -516,6 +515,12 @@ nav.breadcrumbs {
   }
 }
 
+.file .metadata h2 {
+  @include breakpoint(large) {
+  font-size: rem-calc(28px);
+  }
+}
+
 /*Centre media embed items when option chosen*/
 .center.file, .center.assets {
   display: flex;
@@ -885,7 +890,7 @@ display: none;
 }
 
 .media-text h2 {
-  margin-bottom: $global-margin;
+  margin-bottom: 0 * $global-margin;
 }
 
 .media-text .left,
@@ -1149,6 +1154,11 @@ section.image-banner {
   @include breakpoint(medium) {
     margin-top: -2 * $global-margin;
   }
+}
+
+/*Accordion*/ 
+button.accordion-trigger {
+  cursor: pointer;
 }
 
 /*Additional Search Bar*/
