--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text full-width-css grid-x grid-padding-x margin-bottom-1 background-colour-uom-footer">
+<div class="block media-text full-width-css grid-x grid-padding-x background-colour-uom-footer">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading medium-offset-1 large-offset-2 margin-bottom-1">
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
