--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -1,3 +1,8 @@
+<?php
+$this->headLink()->prependStylesheet($this->assetUrl('css/annona.css')); 
+$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
+?>
+
 <div class="<?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
     <div class="attachments max-image-height">
     <?php foreach($this->attachments as $attachment): ?>
