--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -59,12 +59,12 @@ foreach ($itemMedia as $media) {
             } 
             if ($viewer == 'youtube') {
                 echo "<div class='responsive-embed widescreen'>";     
-                echo $media->render();  // Assuming you want to render the default media
+                echo $media->render();
                 echo "</div>";
             }
-            //if ($viewer == 'default') {     
-            //    echo $media->render();  // Assuming you want to render the default media
-            //}
+            if ($viewer == 'default') {     
+                echo $media->render();  // Assuming you want to render the default media
+            }
         }
         ?>
     </div>
