--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -23,9 +23,13 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 $valueLang = $filterLocale ? [$lang, ''] : null;
 
-$viewers = []; // Initialize an array to store viewer types
+$viewers = [];
+$miradorViewer = null;
+$universalViewer = null;
+$youtubeViewer = null;
+$defaultViewer = null;
 
-foreach ($itemMedia as $media) {
+foreach ($itemMedia as $index => $media) {
     $mediaType = $media->mediaType();
     $mediaRenderer = $media->renderer();
 
@@ -35,41 +39,53 @@ foreach ($itemMedia as $media) {
         $viewers[] = 'universal';
     } elseif ($mediaRenderer == 'youtube') {
         $viewers[] = 'youtube';
+        $youtubeViewer = "<div class='responsive-embed widescreen'>" . $media->render() . "</div>";
     } else {
         $viewers[] = 'default';
+        $defaultViewer = $media->render();
+    }
+}
+
+// Initialize each viewer only once
+foreach ($viewers as $viewer) {
+    if ($viewer == 'mirador' && $miradorViewer === null) {
+        $miradorViewer = $this->mirador($item);
+    } elseif ($viewer == 'universal' && $universalViewer === null) {
+        $universalViewer = $this->universalViewer($item);
+    } elseif ($viewer == 'youtube' && $youtubeViewer === null) {
+        $youtubeViewer = $itemMedia->render();
+    } elseif ($viewer == 'default' && $defaultViewer === null) {
+        $defaultViewer = $itemMedia->render(); // Assuming you want to render the default media
     }
 }
 ?>
 
-    <div class="resource-title">
-        <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-        <h2 class="label"><?php echo $translate('Item'); ?></h2>
-    </div>
+<div class="resource-title">
+    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+    <h2 class="label"><?php echo $translate('Item'); ?></h2>
+</div>
 
-    <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
-        <?php $this->trigger('view.show.before'); ?>
+<div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+    <?php $this->trigger('view.show.before'); ?>
 
-        <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-            <?php 
-            foreach ($viewers as $viewer) {
-                if ($viewer == 'mirador') {
-                    echo $this->mirador($item);
-                } 
-                if ($viewer == 'universal') {    
-                    echo $this->universalViewer($item); 
-                } 
-                if ($viewer == 'youtube') {
-                    echo "<div class='responsive-embed widescreen'>";     
-                    echo $media->render();
-                    echo "</div>";
-                }
-                if ($viewer == 'default') {     
-                    echo $media->render();  // Assuming you want to render the default media
-                }
-            }
-            ?>
-        </div>
+    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+        <?php 
+        // Display the main viewer
+        if ($miradorViewer !== null) {
+            echo $miradorViewer;
+        } 
+        //if ($universalViewer !== null) {
+        //    echo $universalViewer;
+        //} 
+        if ($youtubeViewer !== null) {
+            echo $youtubeViewer;
+        } 
+        if ($defaultViewer !== null) {
+            echo $defaultViewer;
+        }
+        ?>
     </div>
+</div>
 
     <?php if ($fullWidthMainHasBlocks): ?>
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
