--- a/view/common/block-template/a-card.phtml
+++ b/view/common/block-template/a-card.phtml
@@ -10,24 +10,26 @@ $assetCount = count(array_filter($attachments, function($attachment) {
 $assetColumn = in_array($assetCount, [1, 2, 4]) ? 'asset-column-2' : 'asset-column-3';
 ?>
 
-<div class="assets <?php echo $assetColumn; ?>">
-  <?php foreach ($attachments as $attachment): ?>
-    <?php $asset = $attachment['asset']; ?>
-    <div class="asset card">
-        <?php $assetImage = ($asset) ? $this->thumbnail($asset, 'square', ['class' => 'card-image']) : ''; ?>
-        <?php $page = (array_key_exists('page', $attachment)) ? $attachment['page'] : null; ?>
-        <?php if ($page): ?>
-            <a href="<?php echo $escape($page->siteUrl()); ?>">
-                <?php $altLinkTitle = ($attachment['alt_link_title'] !== '') ? $escape($attachment['alt_link_title']) : false; ?>
+<div class="reveal-on-scroll lazy-fade-in">  <!-- Lazy load block -->
+    <div class="assets <?php echo $assetColumn; ?>">
+    <?php foreach ($attachments as $attachment): ?>
+        <?php $asset = $attachment['asset']; ?>
+        <div class="asset card">
+            <?php $assetImage = ($asset) ? $this->thumbnail($asset, 'square', ['class' => 'card-image']) : ''; ?>
+            <?php $page = (array_key_exists('page', $attachment)) ? $attachment['page'] : null; ?>
+            <?php if ($page): ?>
+                <a href="<?php echo $escape($page->siteUrl()); ?>">
+                    <?php $altLinkTitle = ($attachment['alt_link_title'] !== '') ? $escape($attachment['alt_link_title']) : false; ?>
+                    <?php echo $assetImage; ?>
+                    <span class="h4 link-title card-divider"><?php echo ($altLinkTitle) ? $altLinkTitle : $escape($page->title()); ?></span>
+                </a>
+            <?php else: ?>
                 <?php echo $assetImage; ?>
-                <span class="h4 link-title card-divider"><?php echo ($altLinkTitle) ? $altLinkTitle : $escape($page->title()); ?></span>
-            </a>
-        <?php else: ?>
-            <?php echo $assetImage; ?>
-        <?php endif; ?>
-        <?php if ($attachment['caption'] !== ''): ?>
-        <div class="caption card-section"><?php echo $escape($attachment['caption']); ?></div>
-        <?php endif; ?>
+            <?php endif; ?>
+            <?php if ($attachment['caption'] !== ''): ?>
+            <div class="caption card-section"><?php echo $escape($attachment['caption']); ?></div>
+            <?php endif; ?>
+        </div>
+    <?php endforeach; ?>
     </div>
-  <?php endforeach; ?>
 </div>
