--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3762,10 +3762,10 @@ transform: scale(1.01);
 .site-list .site a {
   font-size: rem-calc(18);
   @include breakpoint(medium) {
-    font-size: 1.2 * $global-font-size;
+    font-size: 1.1 * $global-font-size;
   }
   @include breakpoint(large) {
-  font-size: 1.3 * $global-font-size;
+  font-size: 1.15 * $global-font-size;
   }
 }
 
@@ -3788,7 +3788,7 @@ transform: scale(1.01);
     grid-template-columns: repeat(4, 1fr);
   }
   @include breakpoint(large) {
-  padding: 20px;
+  padding: 20p 0;
   }
 }
 
@@ -3850,12 +3850,12 @@ transform: scale(1.01);
   }
 }
 
-.list-of-sites.site-list:hover .site.card,
+.site-list:hover .site.card,
 .list-of-sites-dynamic.site-list:hover .site.card {
   opacity: 0.7;
 }
 
-.list-of-sites.site-list .site.card:hover,
+.site-list .site.card:hover,
 .list-of-sites-dynamic.site-list .site.card:hover {
   opacity: 1;
 }
