--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -26,4 +26,22 @@ endforeach;
 
 <script src="http://localhost/omeka-s/themes/foundation-s/asset/js/scrollbox-revised.js"></script>
 
+<section class="scrollbox-thrower" style="margin-top: 60px;">
+    <aside class="coverleft">&nbsp;</aside>
+
+    <aside class="covermain">
+    <h1>Featured stories</h1>
+
+    <section id="featured">
+        
+    
+
+        <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
+    </section>
+    <a class="viewall" href="./">View all</a></aside>
+
+    <aside class="coverright">&nbsp;</aside>
+</section>
+
+
 
