--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -1,4 +1,8 @@
 <?php
+$this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox-revised.css'));
+?>
+
+<?php
 $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
 $NEW = [];
 
@@ -30,15 +34,12 @@ endforeach;
     <aside class="coverleft">&nbsp;</aside>
 
     <aside class="covermain">
-    <h1>Featured stories</h1>
-
-    <section id="featured">
-        
-    
-
-        <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
-    </section>
-    <a class="viewall" href="./">View all</a></aside>
+        <h1>Featured stories</h1>
+        <section id="featured">
+            <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
+        </section>
+        <a class="viewall" href="./">View all</a>
+    </aside>
 
     <aside class="coverright">&nbsp;</aside>
 </section>
