--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -4,7 +4,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox-revised.css')
 
 <?php
 $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
-$NEW = [];
+$featuredScrollbox = [];
 
 foreach ($sites as $site):
     $featured = $siteSettingService('extended_site_description_featured', null, $site->id());
@@ -13,7 +13,7 @@ foreach ($sites as $site):
         $thumbnailUrl = $thumbnails && $site->thumbnail() ? $site->thumbnail()->assetUrl() : null;
         $summary = $summaries ? $site->summary() : null;
 
-        $NEW[] = [
+        $featuredScrollbox[] = [
             'title' => $site->title(),
             'url' => $site->siteUrl(),
             'featured' => $featured,
@@ -25,29 +25,28 @@ endforeach;
 ?>
 
 <pre>
-<?php print_r($NEW); ?>
+<?php print_r($featuredScrollbox); ?>
 </pre>
 
 <script>
-    window.NEW = <?php echo json_encode($NEW, JSON_HEX_TAG | JSON_HEX_AMP | JSON_HEX_APOS | JSON_HEX_QUOT); ?>;
+    window.featuredScrollbox = <?php echo json_encode($featuredScrollbox, JSON_HEX_TAG | JSON_HEX_AMP | JSON_HEX_APOS | JSON_HEX_QUOT); ?>;
     </script>
 
 <script src="http://localhost/omeka-s/themes/foundation-s/asset/js/scrollbox-revised.js"></script>
 
-<section class="scrollbox-thrower" style="margin-top: 60px;">
-    <aside class="coverleft">&nbsp;</aside>
+<div class="full-width">
+    <section class="scrollbox-thrower" style="margin-top: 60px;">
+        <aside class="coverleft">&nbsp;</aside>
 
-    <aside class="covermain">
-        <h1>Featured stories</h1>
-        <section id="featured" class="full-width">
-        <ul class="thrower"></ul>
-            <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
-        </section>
-        <a class="viewall" href="./">View all</a>
-    </aside>
+        <aside class="covermain">
+            <h1>Featured stories</h1>
+            <section id="featured" class="full-width">
+            <ul class="thrower"></ul>
+                <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
+            </section>
+            <a class="viewall" href="./">View all</a>
+        </aside>
 
-    <aside class="coverright">&nbsp;</aside>
-</section>
-
-
-
+        <aside class="coverright">&nbsp;</aside>
+    </section>
+</div>
