--- a/asset/css/scrollbox.css
+++ b/asset/css/scrollbox.css
@@ -2,7 +2,19 @@
     width: 100%;
     overflow: hidden;
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
+}
+
+@media screen and (min-width: 640px) {
+    .scrollbox-thrower {
+        grid-template-columns: 1fr 4fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .scrollbox-thrower {
+        grid-template-columns: 1fr 3fr 1fr;
+    }
 }
 
 .scrollbox-thrower aside.coverleft, .scrollbox-thrower aside.coverright
@@ -56,16 +68,33 @@
 
 .scrollbox-thrower aside.covermain ul li {
     font-size: 16px;
-    display: inline-grid
-;
+    display: inline-grid;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 100%;
     height: 180px;
     box-sizing: border-box;
     padding: 0 10px;
     opacity: 1;
     position: relative;
+}
+
+@media screen and (min-width: 640px) {
+    .scrollbox-thrower aside.covermain ul li {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 850px) {
+    .scrollbox-thrower aside.covermain ul li {
+        width: 33%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .scrollbox-thrower aside.covermain ul li {
+        width: 25%;
+    }
 }
 
 .scrollbox-thrower aside.covermain ul li:nth-child(1) a {
